[package]
name = "darktide-rebooter"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
chrono = "0.4.24"
open = "4.0.1"
steamlocate = "1.2.0"
systray = "0.4.0"
walkdir = "2.3.3"
winapi = { version = "0.3.9", features = ["winbase", "winuser"] }

[build-dependencies]
embed-resource = "2.1.1"

[[bin]]
name = "DarktideRebooter"
path = "src/main.rs"
